--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -9,10 +9,14 @@
   <div>
     <% if product.quantity == 0 %>
       <span class="soldout">Sold out</span>
-    <% end %>
-    <%= button_to add_item_cart_path(product_id: product.id), class: 'btn' ,
-    method: :post do %>
-      <%= fa_icon "shopping-cart", text: 'Add' %> 
+      <%= button_to add_item_cart_path(product_id: product.id), class: 'btn', disabled: true, method: :post do %>
+        <%= fa_icon "shopping-cart", text: 'Add' %> 
+      <% end %>
+    <% else %>
+      <%= button_to add_item_cart_path(product_id: product.id), class: 'btn' ,
+      method: :post do %>
+        <%= fa_icon "shopping-cart", text: 'Add' %> 
+      <% end %>
     <% end %>
   </div>
 </article>
