--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -1,2 +1,32 @@
-<h1>Admin::Dashboard#show</h1>
-<p>Find me in app/views/admin/dashboard/show.html.erb</p>
+<section class="admin-products-index">
+
+  <header class="page-header">
+    <h1>Admin Dashboard</h1>
+  </header>
+
+<div class="row align-items-stretch">
+<div class="col-12 col-md-6">
+  <div class="card mb-4 rounded-3 shadow-sm">
+      <div class="card-header py-3">
+        <h4 class="my-0 fw-normal">Total Products</h4>
+      </div>
+      <div class="card-body">
+        <div class="h1 card-title pricing-card-title"><%= @products_count %></div>
+
+        <%= link_to 'Products', [:admin, :products], class: "btn btn-secondary" %>
+      </div>
+    </div>
+  </div>
+  <div class="col-12 col-md-6">
+    <div class="card mb-4 rounded-3 shadow-sm">
+      <div class="card-header py-3">
+          <h4 class="my-0 fw-normal">Total Categories</h4>
+        </div>
+        <div class="card-body">
+          <div class="h1 card-title pricing-card-title"><%= @categories_count %></div>
+        </div>        
+      </div>
+    </div>
+  </div>
+</div>
+</section>
