Add admin categories feature that includes an index page and new category form

--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -24,6 +24,7 @@
         </div>
         <div class="card-body">
           <div class="h1 card-title pricing-card-title"><%= @categories_count %></div>
+          <%= link_to 'Categories', [:admin, :categories], class: "btn btn-secondary" %>
         </div>        
       </div>
     </div>
