--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -60,6 +60,8 @@
             <li><%= link_to 'Categories', [:admin, :categories], class: "nav-link" %></li>
           </ul>
         </li>
+        <li class="nav-item"><%= link_to 'Login', [:login], class: "nav-link" %></li>
+        <li class="nav-item"><%= link_to 'Sign up', [:signup], class: "nav-link" %></li>  
         <li class="nav-item end-0">
           <%= link_to cart_path, class: "nav-link " do %> <%= fa_icon "shopping-cart" %>
           My Cart (<%= cart.size %>) <% end %>
