--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -60,8 +60,13 @@
             <li><%= link_to 'Categories', [:admin, :categories], class: "nav-link" %></li>
           </ul>
         </li>
-        <li class="nav-item"><%= link_to 'Login', [:login], class: "nav-link" %></li>
-        <li class="nav-item"><%= link_to 'Sign up', [:signup], class: "nav-link" %></li>  
+        <% if current_user %>
+          <li class="nav-item nav-link disabled">Signed in as <%= current_user.first_name %> <%= current_user.last_name %></li>
+          <li class="nav-item"><%= link_to 'Logout', [:logout], class: "nav-link" %></li>
+        <% else %>
+          <li class="nav-item"><%= link_to 'Login', [:login], class: "nav-link" %></li>
+          <li class="nav-item"><%= link_to 'Sign up', [:signup], class: "nav-link" %></li>  
+        <% end %>
         <li class="nav-item end-0">
           <%= link_to cart_path, class: "nav-link " do %> <%= fa_icon "shopping-cart" %>
           My Cart (<%= cart.size %>) <% end %>
