--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -108,6 +108,25 @@ form.button_to {
 .page-header {
   margin: 3em 0;
 }
+
 .text-danger {
   color: #f38792 !important;
+}
+
+@mixin btn-submit() {
+  background-color:  rgba(0, 130, 29, 0.7);
+  border: 0;
+  border-radius: 0.25rem;
+  font-family: "Montserrat";
+  min-width: 110px;
+  padding: 0.375em 1em;
+
+  &:hover {
+    background-color: rgba(0, 130, 29, 1);;
+    border:0;
+  }
+}
+
+.btn-primary {
+  @include btn-submit();
 }
